Add HyprExpo plugin configuration and keybindings; update monitor settings and wallpaper colors

--- a/UserConfigs/UserKeybinds.conf
+++ b/UserConfigs/UserKeybinds.conf
@@ -19,9 +19,11 @@ bindr = $mainMod, $mainMod_L, exec, pkill tofi-drun || tofi-drun # Super Key to 
 bind = $mainMod, D, exec, pkill tofi-drun || tofi-drun # Main Menu (APP Launcher)
 bind = $mainMod, B, exec, xdg-open "https://"  # default browser
 bind = $mainMod, A, exec, pkill rofi || true && ags -t 'overview' # desktop overview (if installed)
+bind = $mainMod, tab, hyprexpo:expo, toggle # HyprExpo overview mode (overrides default workspace m+1)
 bind = $mainMod, Return, exec, $term  #terminal
 bind = $mainMod, E, exec, $files #file manager
 bind = $mainMod, Z, exec, ~/.local/bin/zed # Zed editor
+bind = $mainMod, C, exec, cursor # Cursor editor
 bind = CTRL SHIFT, Escape, exec, $term -e btop --utf-force # system monitor (btop)
 
 
