--- a/wallust/wallust-hyprland.conf
+++ b/wallust/wallust-hyprland.conf
@@ -1,21 +1,21 @@
 # /* ---- 💫 https://github.com/JaKooLit 💫 ---- */  
 # /* wallust template - colors-hyprland */ 
 
-$background = rgb(0C0E0E)
-$foreground = rgb(DCE2F0)
-$color0 = rgb(373939)
-$color1 = rgb(3C4445)
-$color2 = rgb(40474A)
-$color3 = rgb(3E484B)
-$color4 = rgb(40484B)
-$color5 = rgb(6A8279)
-$color6 = rgb(73819E)
-$color7 = rgb(C4CDE1)
-$color8 = rgb(89909D)
-$color9 = rgb(3D484A)
-$color10 = rgb(414B4F)
-$color11 = rgb(404C51)
-$color12 = rgb(414C50)
-$color13 = rgb(789D8F)
-$color14 = rgb(9AACD3)
-$color15 = rgb(C4CDE1)
+$background = rgb(242625)
+$foreground = rgb(F7F2EA)
+$color0 = rgb(4A4B4A)
+$color1 = rgb(7C2513)
+$color2 = rgb(5E421E)
+$color3 = rgb(525131)
+$color4 = rgb(896530)
+$color5 = rgb(946738)
+$color6 = rgb(AEA492)
+$color7 = rgb(EBE4D8)
+$color8 = rgb(A5A097)
+$color9 = rgb(A63119)
+$color10 = rgb(7D5828)
+$color11 = rgb(6E6C41)
+$color12 = rgb(B78640)
+$color13 = rgb(C5894B)
+$color14 = rgb(E9DBC2)
+$color15 = rgb(EBE4D8)
