--- a/hyprland.conf
+++ b/hyprland.conf
@@ -55,3 +55,20 @@ workspace = 8, monitor:DP-2
 workspace = 9, monitor:DP-2
 workspace = 10, monitor:DP-2
 
+# --- Plugin Loading ---
+plugin = /home/rasheed/.local/share/hyprload/plugins/hyprexpo.so
+
+# --- Plugin Configuration ---
+plugin {
+    hyprexpo {
+        columns = 3
+        gap_size = 5
+        bg_col = rgb(111111)
+        workspace_method = center current # [center/first] [workspace] e.g. first 1 or center m+1
+
+        enable_gesture = true # laptop touchpad gesture
+        gesture_fingers = 3  # 3-finger gesture
+        gesture_distance = 300 # how far is the "max" for the gesture
+        gesture_positive = true # positive = swipe down. Negative = swipe up.
+    }
+}
