Update wallpaper navigation keybindings to use new script; replace previous commands with WallpaperNavigate.sh

--- a/UserConfigs/UserKeybinds.conf
+++ b/UserConfigs/UserKeybinds.conf
@@ -66,8 +66,8 @@ bind = $mainMod, W, killactive, # close active (not kill)
 bind = $mainMod SHIFT, W, exec, $scriptsDir/KillActiveProcess.sh # Kill active process
 bind = $mainMod, R, exec, $UserScripts/RestartWindow.sh # Restart active window
 binde = CTRL ALT, W, exec, $UserScripts/WallpaperRandom.sh # Random wallpapers (repeatable)
-bind = $mainMod CTRL, left, exec, wpaperd-cli previous-wallpaper # Previous wallpaper
-bind = $mainMod CTRL, right, exec, wpaperd-cli next-wallpaper # Next wallpaper
+bind = $mainMod CTRL, left, exec, $UserScripts/WallpaperNavigate.sh prev # Previous wallpaper
+bind = $mainMod CTRL, right, exec, $UserScripts/WallpaperNavigate.sh next # Next wallpaper
 bind = $mainMod, O, exec, $UserScripts/ToggleOpacity.sh # Toggle window transparency
 bind = $mainMod SHIFT, K, exec, $scriptsDir/KeyBinds.sh # search keybinds via rofi
 bind = $mainMod SHIFT, A, exec, $scriptsDir/Animations.sh #hyprland animations menu
