Add workspace configurations for Hyprland and update Startup_Apps.conf to comment out waybar. Modify UserKeybinds.conf to unbind default tab cycling and adjust workspace navigation keybindings.

--- a/UserConfigs/UserKeybinds.conf
+++ b/UserConfigs/UserKeybinds.conf
@@ -19,7 +19,17 @@ bindr = $mainMod, $mainMod_L, exec, pkill tofi-drun || tofi-drun # Super Key to 
 bind = $mainMod, D, exec, pkill tofi-drun || tofi-drun # Main Menu (APP Launcher)
 bind = $mainMod, B, exec, xdg-open "https://"  # default browser
 bind = $mainMod, A, exec, pkill rofi || true && ags -t 'overview' # desktop overview (if installed)
-bind = $mainMod, tab, hyprexpo:expo, toggle # HyprExpo overview mode (overrides default workspace m+1)
+
+# Unbind default tab workspace cycling (from configs/Keybinds.conf:92-93)
+unbind = $mainMod, tab
+unbind = $mainMod SHIFT, tab
+bind = $mainMod, tab, hyprexpo:expo, toggle # HyprExpo overview mode
+
+# Override period/comma to cycle through ALL workspaces (including empty ones)
+unbind = $mainMod, period
+unbind = $mainMod, comma
+bind = $mainMod, period, workspace, r+1  # next workspace (relative, includes empty)
+bind = $mainMod, comma, workspace, r-1   # previous workspace (relative, includes empty)
 bind = $mainMod, Return, exec, $term  #terminal
 bind = $mainMod, E, exec, $files #file manager
 bind = $mainMod, Z, exec, ~/.local/bin/zed # Zed editor
@@ -66,8 +76,8 @@ bind = $mainMod, W, killactive, # close active (not kill)
 bind = $mainMod SHIFT, W, exec, $scriptsDir/KillActiveProcess.sh # Kill active process
 bind = $mainMod, R, exec, $UserScripts/RestartWindow.sh # Restart active window
 binde = CTRL ALT, W, exec, $UserScripts/WallpaperRandom.sh # Random wallpapers (repeatable)
-bind = $mainMod CTRL, left, exec, $UserScripts/WallpaperNavigate.sh prev # Previous wallpaper
-bind = $mainMod CTRL, right, exec, $UserScripts/WallpaperNavigate.sh next # Next wallpaper
+binde = $mainMod CTRL, left, exec, $UserScripts/WallpaperNavigate.sh prev # Previous wallpaper (repeatable)
+binde = $mainMod CTRL, right, exec, $UserScripts/WallpaperNavigate.sh next # Next wallpaper (repeatable)
 bind = $mainMod, O, exec, $UserScripts/ToggleOpacity.sh # Toggle window transparency
 bind = $mainMod SHIFT, K, exec, $scriptsDir/KeyBinds.sh # search keybinds via rofi
 bind = $mainMod SHIFT, A, exec, $scriptsDir/Animations.sh #hyprland animations menu
