--- a/UserConfigs/Startup_Apps.conf
+++ b/UserConfigs/Startup_Apps.conf
@@ -29,7 +29,7 @@ exec-once = swaync
 exec-once = ags
 exec-once = blueman-applet
 #exec-once = rog-control-center
-exec-once = waybar
+#exec-once = waybar  # Commented - may conflict with ags or other launchers
 
 #clipboard manager
 exec-once = wl-paste --type text --watch cliphist store
