--- a/hyprland.conf
+++ b/hyprland.conf
@@ -54,6 +54,10 @@ workspace = 7, monitor:DP-2
 workspace = 8, monitor:DP-2
 workspace = 9, monitor:DP-2
 workspace = 10, monitor:DP-2
+workspace = 11, monitor:DP-2
+workspace = 12, monitor:DP-2
+workspace = 13, monitor:DP-2
+workspace = 14, monitor:DP-2
 
 # --- Plugin Loading ---
 plugin = /home/rasheed/.local/share/hyprload/plugins/hyprexpo.so
