Enhance Hyprland configuration by adding workspaces 6-10 to monitor eDP-1 and workspaces 15-20 to monitor DP-2. Adjust workspace animation duration in UserAnimations.conf. Update UserKeybinds.conf to streamline keybindings for workspace navigation and add new shortcuts for workspaces 11-22. Modify UserSettings.conf to include scroll event delay. Update WallustSwww.sh to utilize automatic light/dark detection for wallpaper application.

--- a/UserConfigs/UserSettings.conf
+++ b/UserConfigs/UserSettings.conf
@@ -95,6 +95,7 @@ binds {
   workspace_back_and_forth = true
   allow_workspace_cycles = true
   pass_mouse_when_bound = false
+  scroll_event_delay = 0
 }
 
 #Could help when scaling and not pixelating
