--- a/UserConfigs/UserKeybinds.conf
+++ b/UserConfigs/UserKeybinds.conf
@@ -15,7 +15,7 @@ $UserConfigs = $HOME/.config/hypr/UserConfigs
 source= $UserConfigs/01-UserDefaults.conf
 
 # common shortcuts
-bindr = $mainMod, $mainMod_L, exec, pkill tofi-drun || tofi-drun # Super Key to Launch tofi menu
+bindr = $mainMod, $mainMod_L, exec, tofi-drun # Super Key to Launch tofi menu
 bind = $mainMod, D, exec, pkill tofi-drun || tofi-drun # Main Menu (APP Launcher)
 bind = $mainMod, B, exec, xdg-open "https://"  # default browser
 bind = $mainMod, A, exec, pkill rofi || true && ags -t 'overview' # desktop overview (if installed)
@@ -30,6 +30,16 @@ unbind = $mainMod, period
 unbind = $mainMod, comma
 bind = $mainMod, period, workspace, r+1  # next workspace (relative, includes empty)
 bind = $mainMod, comma, workspace, r-1   # previous workspace (relative, includes empty)
+
+# Override mouse wheel to cycle through ALL workspaces (including empty ones)
+unbind = $mainMod, mouse_down
+unbind = $mainMod, mouse_up
+bind = $mainMod, mouse_down, workspace, r-1  # previous workspace with mouse wheel (includes empty)
+bind = $mainMod, mouse_up, workspace, r+1    # next workspace with mouse wheel (includes empty)
+
+# Move window to next/previous workspace and follow (hold/tap-able)
+binde = $mainMod SHIFT, period, movetoworkspace, +1  # move window to next workspace and follow (repeatable)
+binde = $mainMod SHIFT, comma, movetoworkspace, -1   # move window to previous workspace and follow (repeatable)
 bind = $mainMod, Return, exec, $term  #terminal
 bind = $mainMod, E, exec, $files #file manager
 bind = $mainMod, Z, exec, ~/.local/bin/zed # Zed editor
@@ -79,7 +89,7 @@ binde = CTRL ALT, W, exec, $UserScripts/WallpaperRandom.sh # Random wallpapers (
 binde = $mainMod CTRL, left, exec, $UserScripts/WallpaperNavigate.sh prev # Previous wallpaper (repeatable)
 binde = $mainMod CTRL, right, exec, $UserScripts/WallpaperNavigate.sh next # Next wallpaper (repeatable)
 bind = $mainMod, O, exec, $UserScripts/ToggleOpacity.sh # Toggle window transparency
-bind = $mainMod SHIFT, K, exec, $scriptsDir/KeyBinds.sh # search keybinds via rofi
+bind = $mainMod SHIFT, K, exec, $UserScripts/TofiKeybindSearch.sh # search and execute keybinds via tofi
 bind = $mainMod SHIFT, A, exec, $scriptsDir/Animations.sh #hyprland animations menu
 bind = $mainMod SHIFT, O, exec, $UserScripts/ZshChangeTheme.sh # Change oh-my-zsh theme
 bindln = ALT_L, SHIFT_L, exec, $scriptsDir/SwitchKeyboardLayout.sh # Change keyboard layout
@@ -101,3 +111,46 @@ bind = ALT, Caps_Lock, cyclenext, prev
 # to unbind
 #bind = $mainMod ALT, P, submap, reset
 #submap = reset
+
+# --- Workspaces 11-20 (Monitor 2) with SUPER+F1-F10 ---
+# Switch to workspaces 11-20 with SUPER+F1-F10
+bind = $mainMod, F1, workspace, 11   # SUPER+F1 → workspace 11
+bind = $mainMod, F2, workspace, 12   # SUPER+F2 → workspace 12
+bind = $mainMod, F3, workspace, 13   # SUPER+F3 → workspace 13
+bind = $mainMod, F4, workspace, 14   # SUPER+F4 → workspace 14
+bind = $mainMod, F5, workspace, 15   # SUPER+F5 → workspace 15
+bind = $mainMod, F6, workspace, 16   # SUPER+F6 → workspace 16
+bind = $mainMod, F7, workspace, 17   # SUPER+F7 → workspace 17
+bind = $mainMod, F8, workspace, 18   # SUPER+F8 → workspace 18
+bind = $mainMod, F9, workspace, 19   # SUPER+F9 → workspace 19
+bind = $mainMod, F10, workspace, 20  # SUPER+F10 → workspace 20
+bind = $mainMod, F11, workspace, 21  # SUPER+F11 → workspace 21 (bonus)
+bind = $mainMod, F12, workspace, 22  # SUPER+F12 → workspace 22 (bonus)
+
+# Move active window to workspaces 11-20 with SUPER+SHIFT+F1-F10
+bind = $mainMod SHIFT, F1, movetoworkspace, 11   # SUPER+SHIFT+F1 → move to workspace 11
+bind = $mainMod SHIFT, F2, movetoworkspace, 12   # SUPER+SHIFT+F2 → move to workspace 12
+bind = $mainMod SHIFT, F3, movetoworkspace, 13   # SUPER+SHIFT+F3 → move to workspace 13
+bind = $mainMod SHIFT, F4, movetoworkspace, 14   # SUPER+SHIFT+F4 → move to workspace 14
+bind = $mainMod SHIFT, F5, movetoworkspace, 15   # SUPER+SHIFT+F5 → move to workspace 15
+bind = $mainMod SHIFT, F6, movetoworkspace, 16   # SUPER+SHIFT+F6 → move to workspace 16
+bind = $mainMod SHIFT, F7, movetoworkspace, 17   # SUPER+SHIFT+F7 → move to workspace 17
+bind = $mainMod SHIFT, F8, movetoworkspace, 18   # SUPER+SHIFT+F8 → move to workspace 18
+bind = $mainMod SHIFT, F9, movetoworkspace, 19   # SUPER+SHIFT+F9 → move to workspace 19
+bind = $mainMod SHIFT, F10, movetoworkspace, 20  # SUPER+SHIFT+F10 → move to workspace 20
+bind = $mainMod SHIFT, F11, movetoworkspace, 21  # SUPER+SHIFT+F11 → move to workspace 21
+bind = $mainMod SHIFT, F12, movetoworkspace, 22  # SUPER+SHIFT+F12 → move to workspace 22
+
+# Move active window silently to workspaces 11-20 with SUPER+CTRL+F1-F10
+bind = $mainMod CTRL, F1, movetoworkspacesilent, 11   # SUPER+CTRL+F1 → silent move to workspace 11
+bind = $mainMod CTRL, F2, movetoworkspacesilent, 12   # SUPER+CTRL+F2 → silent move to workspace 12
+bind = $mainMod CTRL, F3, movetoworkspacesilent, 13   # SUPER+CTRL+F3 → silent move to workspace 13
+bind = $mainMod CTRL, F4, movetoworkspacesilent, 14   # SUPER+CTRL+F4 → silent move to workspace 14
+bind = $mainMod CTRL, F5, movetoworkspacesilent, 15   # SUPER+CTRL+F5 → silent move to workspace 15
+bind = $mainMod CTRL, F6, movetoworkspacesilent, 16   # SUPER+CTRL+F6 → silent move to workspace 16
+bind = $mainMod CTRL, F7, movetoworkspacesilent, 17   # SUPER+CTRL+F7 → silent move to workspace 17
+bind = $mainMod CTRL, F8, movetoworkspacesilent, 18   # SUPER+CTRL+F8 → silent move to workspace 18
+bind = $mainMod CTRL, F9, movetoworkspacesilent, 19   # SUPER+CTRL+F9 → silent move to workspace 19
+bind = $mainMod CTRL, F10, movetoworkspacesilent, 20  # SUPER+CTRL+F10 → silent move to workspace 20
+bind = $mainMod CTRL, F11, movetoworkspacesilent, 21  # SUPER+CTRL+F11 → silent move to workspace 21
+bind = $mainMod CTRL, F12, movetoworkspacesilent, 22  # SUPER+CTRL+F12 → silent move to workspace 22
