--- a/hyprland.conf
+++ b/hyprland.conf
@@ -43,21 +43,29 @@ source= $HOME/.config/hypr/monitors.conf
 source= $HOME/.config/hypr/workspaces.conf
 
 # --- Workspace assignments ---
+# Monitor 1 (eDP-1): Workspaces 1-10
 workspace = 1, monitor:eDP-1
 workspace = 2, monitor:eDP-1
 workspace = 3, monitor:eDP-1
 workspace = 4, monitor:eDP-1
 workspace = 5, monitor:eDP-1
+workspace = 6, monitor:eDP-1
+workspace = 7, monitor:eDP-1
+workspace = 8, monitor:eDP-1
+workspace = 9, monitor:eDP-1
+workspace = 10, monitor:eDP-1
 
-workspace = 6, monitor:DP-2
-workspace = 7, monitor:DP-2
-workspace = 8, monitor:DP-2
-workspace = 9, monitor:DP-2
-workspace = 10, monitor:DP-2
+# Monitor 2 (DP-2): Workspaces 11-20
 workspace = 11, monitor:DP-2
 workspace = 12, monitor:DP-2
 workspace = 13, monitor:DP-2
 workspace = 14, monitor:DP-2
+workspace = 15, monitor:DP-2
+workspace = 16, monitor:DP-2
+workspace = 17, monitor:DP-2
+workspace = 18, monitor:DP-2
+workspace = 19, monitor:DP-2
+workspace = 20, monitor:DP-2
 
 # --- Plugin Loading ---
 plugin = /home/rasheed/.local/share/hyprload/plugins/hyprexpo.so
