Refactor UserConfigs for improved window management and keybindings
- Update Startup_Apps.conf to simplify commands for launching Google Chrome and Zed.
- Modify UserKeybinds.conf to enhance window management with new keybindings for minimizing and restoring windows using NiflVeil.
- Adjust window rules in WindowRules.conf to direct Google Chrome and Zed to a specific workspace with silent behavior.

--- a/UserConfigs/Startup_Apps.conf
+++ b/UserConfigs/Startup_Apps.conf
@@ -45,10 +45,10 @@ exec-once = hypridle
 #exec-once = $UserScripts/SessionManager.sh
 
 # Chrome background instance for instant launches
-exec-once = [workspace 10 silent] google-chrome --new-window about:blank
+exec-once = google-chrome --new-window about:blank
 
 # Zed background instance for instant launches
-exec-once = [workspace 10 silent] ~/.local/bin/zed
+exec-once = ~/.local/bin/zed
 
 
 # Here are list of features available but disabled by default
