--- a/UserConfigs/UserKeybinds.conf
+++ b/UserConfigs/UserKeybinds.conf
@@ -89,8 +89,9 @@ bind = $mainMod SHIFT, M, exec, $UserScripts/RofiBeats.sh # online music using r
 bind = $mainMod, M, exec, $UserScripts/ToggleMicMonitor.sh # Toggle mic monitoring
 binde = $mainMod ALT, M, exec, $UserScripts/MicMonitorVolume.sh up # Increase mic monitor volume (repeatable)
 binde = $mainMod SHIFT ALT, M, exec, $UserScripts/MicMonitorVolume.sh down # Decrease mic monitor volume (repeatable)
-bind = $mainMod, W, killactive, # close active (not kill)
-bind = $mainMod SHIFT, W, exec, $scriptsDir/KillActiveProcess.sh # Kill active process
+bind = $mainMod, W, exec, ~/.local/bin/niflveil minimize # Minimize window (NiflVeil)
+bind = $mainMod SHIFT, W, killactive, # Close active window (graceful)
+bind = $mainMod CTRL, W, exec, $scriptsDir/KillActiveProcess.sh # Kill active process (force)
 bind = $mainMod, R, exec, $UserScripts/RestartWindow.sh # Restart active window
 binde = CTRL ALT, W, exec, $UserScripts/WallpaperRandom.sh # Random wallpapers (repeatable)
 binde = $mainMod CTRL, left, exec, $UserScripts/WallpaperNavigate.sh prev # Previous wallpaper (repeatable)
@@ -106,9 +107,8 @@ bind = $mainMod ALT, C, exec, $UserScripts/RofiCalc.sh # calculator (qalculate)
 bind = $mainMod CTRL, N, exec, swaync-client -C # Clear all notifications
 bind = $mainMod CTRL SHIFT, N, exec, swaync-client -d # Close notification panel
 
-# Window switching with Alt+Tab (override default)
-bind = ALT, tab, cyclenext
-bind = ALT, tab, bringactivetotop
+# Window switching with Alt+Tab - opens NiflVeil restore menu if minimized windows exist
+bind = ALT, tab, exec, $UserScripts/NiflVeilRestore.sh
 bind = ALT SHIFT, tab, cyclenext, prev
 bind = ALT, Caps_Lock, cyclenext, prev
 
@@ -161,3 +161,9 @@ bind = $mainMod CTRL, F9, movetoworkspacesilent, 19   # SUPER+CTRL+F9 → silent
 bind = $mainMod CTRL, F10, movetoworkspacesilent, 20  # SUPER+CTRL+F10 → silent move to workspace 20
 bind = $mainMod CTRL, F11, movetoworkspacesilent, 21  # SUPER+CTRL+F11 → silent move to workspace 21
 bind = $mainMod CTRL, F12, movetoworkspacesilent, 22  # SUPER+CTRL+F12 → silent move to workspace 22
+
+# NiflVeil - Window minimize manager (using tofi with wallust theming)
+bind = $mainMod, N, exec, ~/.local/bin/niflveil minimize          # Minimize current window
+bind = $mainMod, I, exec, $UserScripts/NiflVeilRestore.sh         # Open restore menu (tofi)
+bind = $mainMod, U, exec, ~/.local/bin/niflveil restore-last      # Restore last minimized window
+bind = $mainMod SHIFT, U, exec, ~/.local/bin/niflveil restore-all # Restore all minimized windows
