--- a/UserConfigs/WindowRules.conf
+++ b/UserConfigs/WindowRules.conf
@@ -113,6 +113,8 @@ windowrulev2 = workspace 4 silent, tag:screenshare*
 windowrulev2 = workspace 6 silent, class:^(virt-manager)$
 windowrulev2 = workspace 6 silent, class:^(.virt-manager-wrapped)$
 windowrulev2 = workspace 9 silent, tag:multimedia*
+windowrulev2 = workspace 50 silent, class:^([Gg]oogle-chrome)$, title:^(about:blank)
+windowrulev2 = workspace 50 silent, class:^(dev.zed.Zed|Zed)$, initialTitle:^(Zed)$
 
 # FLOAT
 windowrulev2 = float, tag:KooL_Cheat*
