--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "NiflVeil"]
 	path = NiflVeil
-	url = https://github.com/Mauitron/NiflVeil.git
+	url = https://github.com/MakingMofongo/NiflVeil.git
